--- a/assets/scss/utils/_helper.scss
+++ b/assets/scss/utils/_helper.scss
@@ -4,3 +4,7 @@
 .bg-gradient-secondary {
   background: linear-gradient(123.31deg, #a9bd7e 0%, #c7d6a5 100%);
 }
+
+.bg-gradient-thirdly {
+  background: linear-gradient(123.31deg, #86a9c2 0%, #adc9db 100%);
+}
