--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,92 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer bg-gradient-thirdly py-8 py-lg-16">
+  <div class="container">
+    <div
+      class="d-md-flex justify-content-md-between align-items-md-center mb-5 mb-md-10"
+    >
+      <div>
+        <a href="index.html" class="mb-3 mb-md-0 d-block">
+          <img
+            class="footer-logo"
+            src="../assets/images/logo-white.svg"
+            alt=""
+          />
+        </a>
+        <div
+          class="footer-social-icons d-md-none pb-5 border-bottom border-light"
+        >
+          <a href="https://www.facebook.com/">
+            <img
+              class="me-2"
+              src="../assets/images/facebook-footer.svg"
+              alt="facebook-icon"
+            />
+          </a>
+          <a href="https://x.com/">
+            <img
+              class="me-2"
+              src="../assets/images/twitter-footer.svg"
+              alt="twitter-icon"
+            />
+          </a>
+          <a href="https://www.instagram.com/">
+            <img src="../assets/images/ig-footer.svg" alt="ig-icon" />
+          </a>
+        </div>
+      </div>
+      <div class="pt-5 pt-md-0">
+        <div class="row">
+          <div class="col-6 col-md-auto mb-4 mb-md-0">
+            <a href="#" class="text-light fs-10 fs-md-9">搜尋保母</a>
+          </div>
+          <div class="col-6 col-md-auto mb-4 mb-md-0">
+            <a href="#" class="text-light fs-10 fs-md-9">成為保母</a>
+          </div>
+          <div class="col-6 col-md-auto">
+            <a href="#" class="text-light fs-10 fs-md-9">常見問題</a>
+          </div>
+          <div class="col-6 col-md-auto">
+            <a href="#" class="text-light fs-10 fs-md-9">登入註冊</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="d-md-flex justify-content-md-between pb-5 pb-md-10 border-bottom border-light"
+    >
+      <div class="d-md-flex">
+        <div class="text-light fs-10 fs-md-9 mb-4 mb-md-0 me-md-8">
+          <p class="fw-bold">信箱</p>
+          <a href="mailto:pawfectcare@gmail.com" class="text-light">
+            pawfectcare@gmail.com
+          </a>
+        </div>
+        <div class="text-light fs-10 fs-md-9">
+          <p class="fw-bold">電話</p>
+          <a href="tel:02-1234-5678" class="text-light"> 02-1234-5678 </a>
+        </div>
+      </div>
+      <div class="footer-social-icons d-none d-md-block">
+        <a href="https://www.facebook.com/">
+          <img
+            class="me-4"
+            src="../assets/images/facebook-footer.svg"
+            alt="facebook-icon"
+          />
+        </a>
+        <a href="https://x.com/">
+          <img
+            class="me-4"
+            src="../assets/images/twitter-footer.svg"
+            alt="twitter-icon"
+          />
+        </a>
+        <a href="https://www.instagram.com/">
+          <img src="../assets/images/ig-footer.svg" alt="ig-icon" />
+        </a>
+      </div>
+    </div>
+    <div class="pt-5 pt-md-10 text-light text-center">
+      <p class="fs-11 fs-md-10">© 2024 Pawfect Care. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
